# starsPayment

./: .gitignore  README.md  all_changes.txt  antiplagiat.py  config.json  pyproject.toml
bot/: __init__.py  __main__.py  bot.py  callback_data.py  enums.py  markups.py  state.py
bot/filters/: admin.py  i18n_filter.py
bot/locales/: messages.pot
bot/locales/en/LC_MESSAGES/: messages.po
bot/middleware/: __init__.py  bot_user.py  chat_action.py  check_banned.py  del_murkup.py  language.py  metric_referor.py  services_di.py  throttling.py  unprocessed_update.py
bot/models/: config_model.py
bot/models/config/: bot_config.py
bot/payments/: AbstractPayment.py  onevisionpay.py  wallet_pay.py
bot/protocols/: service.py  telegram_user_event.py
bot/routers/: __init__.py  change_status_user.py  start.py
bot/routers/admin/: __init__.py  admin.py  affiliate_program.py  change_course.py  get_excel.py  get_user.py  mailing.py  metric.py  other.py  payment_method.py  pdf_format.py  statistics.py
bot/routers/user/: __init__.py  checkdoc.py  friends.py  help.py  payment.py
bot/services/: __init__.py
bot/services/database/: __init__.py  models.py
bot/services/database:/: __init__.py
bot/services/schedule/: __init__.py  jobs.py
bot/utils/: asset.py  bot.py  dispatcher.py  other.py  paths.py  router.py  service_manager.py
