[tool.poetry]
name = "antiplagiat_bot"
version = "0.1.0"
description = ""
authors = ["xxx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^3.8.0", extras = ["i18n"]}
apscheduler = "^3.10.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
aerich = "^0.7.1"
cachetools = "^5.3.1"
openpyxl = "^3.1.2"
suds-py3 = "^1.4.5.0"
pypdf2 = "^3.0.1"
requests = "^2.31.0"


[tool.aerich]
tortoise_orm = "bot.services.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
